<resources>
    <string name="app_name">PokerProjectApp</string>
    <string name="txtEmail">Email@abc.com...</string>
    <string name="loginLogo">Login Logo Description</string>
    <string name="txtPassword">Password...</string>
    <string name="btnLogin">LOGIN TO ACCOUNT</string>
    <string name="btnRegister">NEED A ACCOUNT?</string>
    <string name="btnLogout">Logout</string>
    <string name="txtConfirmPassword">Confirm Password...</string>
    <string name="btnCreateNewAccount">Create New Account</string>
    <string name="btnAlreadyHaveAccount">Already Have Account?</string>
    <string name="btnAccountSetting">Account Setting</string>
    <string name="btnRechargeToken">Recharge</string>
    <string name="txtNickName">Your Nick Name</string>
    <string name="btnSaveAccountSetting">SAVE SETTING</string>
    <string name="btnResetPasswd">Forget Password?</string>
    <string name="txtResetPasswdTitle">Reset Password</string>
    <string name="btnResetPasswdSubmit">SUBMIT</string>
    <string name="txtViewMoney">Bet Options</string>
    <string name="btnDraw">DRAW</string>
    <string name="btnEvaluate">EVALUATE</string>
    <string name="txtViewNotification">$100000</string>

    <string name="imgBtnCard">0</string>
    <string name="imgBtnCard1">1</string>
    <string name="imgBtnCard2">2</string>
    <string name="imgBtnCard3">3</string>
    <string name="imgBtnCard4">4</string>

    <string name="txtRechargeTokenTitle">Recharge Token</string>
    <string name="txtViewQuestion">What is always coming, but never arrives?</string>
    <string name="txtAnswer">Please answer the question</string>
    <string name="firstTimeLoginString">First time login, +$1000</string>
    <string name="dailyLoginString">Daily login +100</string>
    <string name="genericError">An error occurred </string>
    <string name="fillInRemainder">Please fill in your information</string>
    <string name="confirmPasswordError">Confirm password does not match</string>
    <string name="undateImgReminder">Please update your image</string>
    <string name="accountSettingTitle">Account Setting Page</string>
    <string name="permissionDenied">Permission Denied!</string>
    <string name="cropingImgError">An error occurred while cropping image</string>
    <string name="nickNameError">Nick name exist! Please find another nick name</string>
    <string name="saving">Saving . . .</string>
    <string name="enterEmailReminder">Please enter your email!</string>
    <string name="welcome">Welcome</string>
    <string name="errorRetrievingUser">An error occurred while retrieving user</string>
    <string name="cancel">Cancel</string>
    <string name="userWin">Congratulation, you win $</string>
    <string name="userLose">Sorry, you lose $</string>

</resources>
